# glance

./: Cargo.toml  README.md  build.rs  justfile  partitions.csv  rustfmt.toml  sdkconfig.defaults
.cargo/: config.toml
src/: config.rs  main.rs  recorder.rs
src/display/: framebuffer.rs  mod.rs  st7305.rs
src/hw/: afe.rs  battery.rs  button.rs  chip_temp.rs  es7210.rs  mic.rs  mod.rs  rtc.rs  sdcard.rs  shtc3.rs  storage.rs  system.rs
src/include/: afe_bindings.h
src/net/: activity.rs  creds.rs  gh_http.rs  gh_worker.rs  github.rs  log_sink.rs  mod.rs  notifications.rs  prov.rs  prov_ap.rs  recordings_http.rs  screen_http.rs  sntp.rs  system_http.rs  time.rs  wifi.rs
src/ui/: mod.rs
web/: live.html  logs.html  prov_done.html  prov_form.html  recordings.html  settings.html  system.html
