[package]
name = "firmware"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "firmware"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = "0.4"
esp-idf-svc = "0.52.1"
anyhow = "1.0"
embedded-graphics = "0.8"
embedded-hal = "1.0"
heapless = "0.8"
profont = "0.7"
u8g2-fonts = "0.7"
esp32-nimble = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
embuild = "0.33"
